Fixed: Disable word wrap in Partition page.
tower:https://tower.im/projects/6c45279d2fa140258583334a694ecd07/todos/3a9489a3de9640eaa46c43daeda7d1c9/

bugzilla:https://bugzilla.deepin.io/show_bug.cgi?id=1493

--- a/resources/installer/css/part.css
+++ b/resources/installer/css/part.css
@@ -141,6 +141,8 @@
     line-height:27px;
     border-right:1px solid rgba(0,0,0,0.2);
     box-shadow:inset 1px 0 rgba(255,255,255,0.2);
+    overflow: hidden;
+    text-overflow:ellipsis;
 }
 
 .PartTableHeader .Info{
@@ -194,6 +196,7 @@
     line-height:40px;
     float:left;
     text-align:center;
+    overflow: hidden;
 }
 
 .PartTableItem .Fat {
@@ -204,8 +207,16 @@
     width:100px;
 }
 
-.PartTableItem .Fs, .PartTableItem .Mount {
+.PartTableItem .Fs {
     width:110px;
+}
+
+.PartTableItem .SimpleMount {
+    width:209px;
+}
+
+.PartTableItem .AdvancedMount {
+    width:105px;
 }
 
 .PartTableItem .Size {
